Bug 251279 - Kopete notifications when writing messages are displayed too often
Summary: Kopete notifications when writing messages are displayed too often
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chat Window (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-15 10:26 UTC by aosthof
Modified: 2011-03-02 22:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aosthof 2010-09-15 10:26:59 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

When chatting via kopete, one can see if the counterpart is writing a message
via KDE4 notifications (libnotify?). However, if the counterpart is not a quick
writer, one gets a notification that the counterpart is writing a message on
each break he makes when writing.

This is very annoying, as one gets spammed with multiple notification messages
"xy is writing a message" even if it is a short message only, but written
slowly. It would be great if those notifications could be reduced to one time
per written message.

This behavior was seen with KDE 4.5, more exactly:

kdebase4-workspace-4.5.1-497.1.x86_64
kopete-4.5.1-163.1.x86_64

Reproducible: Always

Steps to Reproduce:
1) Start a chat with someone
2) Set window focus on any other window
3) Counterpart has to type a message slowly or with pauses
4) On each pause (feels like >1 sec) one receives the message "xy is writing a message"


Actual Results:  
One gets flooded with "xy is writing a message" messages displayed by the notification daemon of KDE 4.5.

Expected Results:  
Per written written message, it's sufficient to display one single notification when the counterpart is writing a message. Also acceptable would be an increased timeout, let's say triggered by pauses greater than 5 seconds.
Comment 1 Lamarque V. Souza 2011-03-02 22:28:39 UTC
SVN commit 1223419 by lvsouza:

Applying patch from http://reviewboard.kde.org/r/5364/
Thanks Igor Poboiko for the patch.

BUG: 251279
CCMAIL: kopete-devel@kde.org


 M  +38 -11    libkopete/kopetechatsession.cpp  
 M  +5 -0      libkopete/kopetechatsession.h  
 M  +11 -0     libkopete/private/kopeteactivenotification.cpp  
 M  +5 -0      libkopete/private/kopeteactivenotification.h  
 M  +1 -1      protocols/oscar/aim/aimaccount.cpp  
 M  +3 -3      protocols/oscar/aim/ui/aimeditaccountui.ui  
 M  +3 -3      protocols/oscar/aim/ui/aimeditaccountwidget.cpp  
 M  +1 -1      protocols/oscar/liboscar/tasks/filetransfertask.cpp  
 M  +1 -1      protocols/oscar/liboscar/tests/logintest.cpp  
 M  +4 -2      protocols/oscar/oscarcontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1223419