Applying patch from http://reviewboard.kde.org/r/5364/ Thanks Igor Poboiko for the patch.

BUG: 251279
CCMAIL: kopete-devel@kde.org

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1223419